--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -10,6 +10,7 @@
 		android:title="全局https"
 		android:checkable="true"/>
 	<item
+		android:visible="false"
 		android:id="@+id/enable_udp"
 		android:title="启用UDP"
 		android:checkable="true"
@@ -17,4 +18,7 @@
 	<item
 		android:id="@+id/api"
 		android:title="接口"/>
+	<item
+		android:id="@+id/reloadToken"
+		android:title="刷新Token"/>
 </menu>
